--- a/.github/workflows/autograde.yml
+++ b/.github/workflows/autograde.yml
@@ -10,16 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout student code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
+    - uses: actions/setup-python@v4
       with:
         python-version: "3.10"
 
-    - name: Install pytest
+    - name: Install dependencies
       run: pip install pytest
 
+    - name: Set Python path
+      run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
+
     - name: Run tests
+      working-directory: $GITHUB_WORKSPACE
       run: pytest -q
